--- a/app/src/main/res/layout/item_category_category_name.xml
+++ b/app/src/main/res/layout/item_category_category_name.xml
@@ -6,14 +6,22 @@
               android:background="@color/colorWhiterPure"
               android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/imgview_category_img"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@mipmap/list_milk"
+        android:layout_gravity="center_vertical"
+        android:scaleType="center"
+        />
+
     <TextView
         android:id="@+id/txtview_category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:textColor="@color/colorBlackDarker"
         android:textSize="@dimen/txt_category_name"
-        android:drawablePadding="8dp"
         />
 
 </LinearLayout>
