--- a/app/src/main/res/layout/item_category_category_name.xml
+++ b/app/src/main/res/layout/item_category_category_name.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="40dp"
+              android:layout_height="wrap_content"
               android:gravity="center"
-              android:background="@color/colorWhiterPure"
+              android:background="@drawable/selector_product_category_selected_bg"
               android:orientation="horizontal">
 
     <ImageView
@@ -20,8 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:padding="10dp"
         android:textColor="@color/colorBlackDarker"
-        android:textSize="@dimen/txt_category_name"
+        android:textSize="10sp"
         />
 
 </LinearLayout>
