--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorWhiterPure">@android:color/white</color>
     <color name="colorWhiterDarker">#D3D3D3</color>
     <color name="colorWhiterLight">#F5F5F5</color>
+    <color name="colorWhiteLighter">#ebebeb</color>
 
     <color name="colorBlackDarker">#ee000000</color>
     <color name="colorBlackLight">@android:color/darker_gray</color>
@@ -18,6 +19,7 @@
     <color name="colorTxtBlueDarker">#0054a7</color>
 
     <color name="colorTransparent">@android:color/transparent</color>
-    <color name="colorRedDarker">#e50010</color>
 
+    <color name="colorRedDarker">#e50010</color>
+    <color name="colorRedDarkerBtn">#e60111</color>
 </resources>
