--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,15 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="product_detail_popup_check">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:background">@color/colorWhiterPure</item>
+        <item name="android:button">@drawable/selector_send_check_red_bg</item>
+        <item name="android:lines">1</item>
+    </style>
+
 </resources>
