--- a/app/src/main/res/layout/item_category_category_name.xml
+++ b/app/src/main/res/layout/item_category_category_name.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:gravity="center"
-              android:background="@drawable/selector_product_category_selected_bg"
+              android:paddingLeft="10dp"
               android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imgview_category_img"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:src="@mipmap/list_milk"
         android:layout_gravity="center_vertical"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
         />
 
     <TextView
@@ -20,7 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:padding="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:singleLine="true"
         android:textColor="@color/colorBlackDarker"
         android:textSize="10sp"
         />
