--- a/app/src/main/res/layout/item_home_top_banner.xml
+++ b/app/src/main/res/layout/item_home_top_banner.xml
@@ -14,6 +14,7 @@
             app:indicator_height="8dp"
             />
         <RadioGroup
+            android:id="@+id/radiogroup_home_top_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
