--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="19dp"
+        android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="#1f9bd4">
 
@@ -83,6 +83,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/txtview_product_detail_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
@@ -111,6 +112,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/txtview_product_detail_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="随心订价：5.6元"
@@ -123,6 +125,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/txtview_product_detail_vol"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="2dp"
@@ -145,6 +148,7 @@
                             android:text="订奶规则："/>
 
                             <TextView
+                                android:id="@+id/txtview_product_detail_order_norms"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="left"
@@ -329,6 +333,7 @@
                     android:text="配送方："/>
 
                 <TextView
+                    android:id="@+id/txtview_companny_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -337,7 +342,6 @@
                     android:padding="10dp"
                     android:drawableLeft="@mipmap/product_shop"
                     android:drawablePadding="@dimen/txtview_drawable_padding"
-                    android:text="江苏/南京/某某经销商"
                     android:textColor="@color/colorTxtBlack"
                     />
 
@@ -364,6 +368,7 @@
             android:text="合计金额:"
             />
         <TextView
+            android:id="@+id/txtview_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
