--- a/app/src/main/res/layout/popup_product_detail_selector.xml
+++ b/app/src/main/res/layout/popup_product_detail_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
@@ -34,12 +34,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginLeft="13dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="top|center_horizontal">
 
 
             <TextView
+                android:id="@+id/txtview_popup_product_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="优倍随手杯"
@@ -50,6 +51,7 @@
                 />
 
             <TextView
+                android:id="@+id/txtview_popup_product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
@@ -89,9 +91,15 @@
                 android:text="选择容量："/>
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rclview_popup_vol_selector"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center_horizontal"/>
+
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -112,7 +120,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="（每次送奶分数）"
+                    android:text="份 （每次送奶分数）"
                     />
 
             </LinearLayout>
@@ -133,24 +141,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:textSize="12sp"
                     android:text="选择模式："/>
 
+                <RadioGroup
+                    android:id="@+id/rdgroup_popup_send_mode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="每日送"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_everyday"
+                        style="@style/product_detail_popup_check"
+                        android:checked="true"
+                        android:text="每日送"/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="工作日送"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_workday"
+                        style="@style/product_detail_popup_check"
+                        android:text="工作日送"/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="双休日送"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_weekend"
+                        style="@style/product_detail_popup_check"
+                        android:text="双休日送"/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="其它模式"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_other"
+                        style="@style/product_detail_popup_check"
+                        android:text="其它模式"/>
+
+                </RadioGroup>
+
 
             </LinearLayout>
 
@@ -170,25 +192,39 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:textSize="12sp"
                     android:text="选择时间："/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:button="@drawable/selector_send_check_blue_bg"
-                    android:text="随心订"/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="一个月"/>
+                <RadioGroup
+                    android:id="@+id/rdgroup_popup_send_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="两个月"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_arbitrary"
+                        android:checked="true"
+                        style="@style/product_detail_popup_check"
+                        android:background="@drawable/selector_send_check_blue_bg"
+                        android:text="随心订"/>
 
-                <CheckBox
-                    style="@style/product_detail_popup_check"
-                    android:text="三个月"/>
+                    <RadioButton
+                        android:id="@+id/radio_popup_everyonemonth"
+                        style="@style/product_detail_popup_check"
+                        android:text="一个月"/>
 
+                    <RadioButton
+                        android:id="@+id/radio_popup_everytwomonth"
+                        style="@style/product_detail_popup_check"
+                        android:text="两个月"/>
+
+                    <RadioButton
+                        android:id="@+id/radio_popup_everythreemonth"
+                        style="@style/product_detail_popup_check"
+                        android:text="三个月"/>
+
+                </RadioGroup>
 
             </LinearLayout>
 
@@ -201,6 +237,7 @@
 
 
             <Button
+                android:id="@+id/btn_popup_show_canlendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorRedDarkerBtn"
@@ -228,4 +265,4 @@
 
 
 
-</merge>
+</FrameLayout>
