--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,14 +22,21 @@
     </style>
 
     <style name="product_detail_popup_check">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">2dp</item>
         <item name="android:padding">5dp</item>
-        <item name="android:background">@color/colorWhiterPure</item>
-        <item name="android:button">@drawable/selector_send_check_red_bg</item>
+        <item name="android:background">@drawable/selector_send_check_red_bg</item>
+        <item name="android:button">@null</item>
         <item name="android:lines">1</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="popupanim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/anim_popup_in</item>
+        <item name="android:windowExitAnimation">@anim/anim_popup_out</item>
     </style>
 
 </resources>
