--- a/app/src/main/res/layout/activity_home_top_search_widget.xml
+++ b/app/src/main/res/layout/activity_home_top_search_widget.xml
@@ -63,7 +63,6 @@
         android:textSize="10sp"
         android:text="购物车"
         android:drawablePadding="3dp"
-        android:drawableTop="@mipmap/nav_cart"
-        />
+        android:drawableTop="@mipmap/nav_cart"/>
 
 </LinearLayout>
