--- a/app/src/main/res/layout/activity_find_back_psw.xml
+++ b/app/src/main/res/layout/activity_find_back_psw.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="center"
             android:textColor="#ffffff"
             android:textSize="22sp"
-            android:text="登录"
+            android:text="找回密码"
             />
 
     </FrameLayout>
@@ -45,6 +45,7 @@
         android:textSize="25sp"/>
 
     <EditText
+        android:id="@+id/edit_find_psw_back_input_phone_num"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -61,6 +62,7 @@
 
 
     <Button
+        android:id="@+id/btn_get_find_psw_back_validation_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
