--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -84,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
+            android:checked="true"
             android:button="@drawable/selector_login_select_bg"/>
 
         <TextView
@@ -94,6 +95,7 @@
             android:textColor="@color/colorBlackLight"
             android:text="我已阅读并同意"/>
         <Button
+            android:id="@+id/btn_register_show_protocol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTxtBlueLight"
