--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -165,7 +165,7 @@
                         android:paddingTop="5dp"
                         android:paddingLeft="10dp"
                         android:paddingBottom="10dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
                         <TextView
