--- a/app/src/main/res/layout/item_popup_select_vol.xml
+++ b/app/src/main/res/layout/item_popup_select_vol.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content">
 
@@ -14,4 +14,4 @@ android:layout_height="wrap_content">
         android:scaleType="centerInside"
         android:src="@mipmap/product02_312_162"/>
 
-</merge>
+</FrameLayout>
