--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,14 +21,28 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="product_detail_popup_check">
+    <style name="product_detail_popup_check_send_mode">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">2dp</item>
         <item name="android:padding">5dp</item>
-        <item name="android:background">@drawable/selector_send_check_red_bg</item>
+        <item name="android:background">@drawable/selector_send_mode_check_red_bg</item>
+        <item name="android:button">@null</item>
+        <item name="android:lines">1</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="product_detail_popup_check_send_other_mode">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:background">@drawable/selector_send_other_mode_check_bg</item>
+        <item name="android:textColor">@drawable/selector_send_mode_other_txt_color</item>
         <item name="android:button">@null</item>
         <item name="android:lines">1</item>
         <item name="android:textSize">10sp</item>
